// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for danger 1`] = `
<DocumentFragment>
  <div
    class="alert-danger"
    role="alert"
  >
    <p
      class="alert-text text-center"
    >
      DANGER
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot for success 1`] = `
<DocumentFragment>
  <div
    class="alert-success"
    role="alert"
  >
    <p
      class="alert-text text-center"
    >
      SUCCESS
    </p>
  </div>
</DocumentFragment>
`;
